Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -47,7 +47,7 @@
             border: 5px solid rgba(255,255,255,0.5);
             border-radius: 50%;
             position: relative;
-            background: url('img/header-img.png');
+            //background: url('img/header-img.png');
             .centerHeader-office-img-level{
               position: absolute;
               width: 22px;
