--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -6,7 +6,7 @@
 
 /* 年级以及知识点选择css(start) */
 .choiceSet{
-  border: 1px dashed rgb(241,242,246);
+  border: 1px solid rgb(241,242,246);
   padding: 0 @LRpadding;
 }
 @grey:rgb(102,102,102);
@@ -100,7 +100,7 @@
         }
         .choice-items-spe{//普通情况下的
             overflow: hidden;
-            height:2rem;
+//            height:2rem;
             margin-top: 1rem;
             margin-bottom: 1rem;
             .choice-item-each{
@@ -118,7 +118,7 @@
         .choice-items-spe-input{//input框所添加的特殊类名
             margin-top: 1.2rem;
             margin-bottom: 1.2rem;
-            height:1.8rem;
+//            height:1.8rem;
         }
         .choice-items-open{
             overflow: auto;
