Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -233,10 +233,10 @@
 }
 
 .class_test address,
-cite,
-dfn,
-em,
-var {
+.class_test cite,
+.class_test dfn,
+.class_test em,
+.class_test var {
   font-style: normal;
 }
 .class_test .btn_red {
@@ -439,11 +439,11 @@ var {
   padding: 0 0 0 70px;
   background: url("http://img04.xesimg.com/wrong_icon_analysis.png") no-repeat left 0px top 10px;
 }
-.class_answer ul, li {
+.class_answer ul,.class_answer li {
     list-style: none;
 }
 .class_answer a,
-a:link {
+.class_answer a:link {
   text-decoration: none;
   color: #0076b3;
 }
