--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -99,13 +99,15 @@
             letter-spacing: 0.3rem;
         }
         .choice-items-spe{//普通情况下的
-            overflow: hidden;
+//            overflow: hidden;
 //            height:2rem;
             margin-top: 1rem;
             margin-bottom: 1rem;
+            max-height:98px;
+            overflow: auto;
             .choice-item-each{
                 line-height: 1;
-                margin-bottom: 1rem;
+                margin-bottom: 10px;
                 .choiceSetting;
                 cursor: pointer;
             }
@@ -117,8 +119,9 @@
         }
         .choice-items-spe-input{//input框所添加的特殊类名
             margin-top: 1.2rem;
-            margin-bottom: 1.2rem;
-//            height:1.8rem;
+            margin-bottom: 0;
+            max-height:88px;
+            overflow: auto;
         }
         .choice-items-open{
             overflow: auto;
