Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -643,6 +643,12 @@
             overflow:hidden;
             line-height: 40px;
             text-align: right;
+            a{
+                color: @blue-color;
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
         }
         .fresh-comment-line{
             height: 30px;
@@ -650,7 +656,6 @@
             margin: 8px 0;
             text-align: center;
             .fresh-line-tip {
-              background:#fff;
               color: #999;
               height: 60px;
               display: inline-block;
