收藏样式更改

--- a/source/widget/Public.Module/collectApp.less
+++ b/source/widget/Public.Module/collectApp.less
@@ -122,6 +122,7 @@
 				height: 35px;
 				margin: 10 0;
 				overflow: hidden;
+				margin-top: 10px;
 				span.icoVoice{
 					background: url("img/voice_icon1.png") no-repeat 0 0;
 					float: left;
