--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -190,6 +190,7 @@ body{
 				vertical-align: top;
 				float: right;
 				margin-right: 10px;
+				font-family: "SimSun";
 			}
 			.change-course{
 				color: #e74c3c;
@@ -247,7 +248,7 @@ body{
 		}
 		.more-service{
 			margin-right: 10px;
-			margin-top: 2px;
+			margin-top: 3px;
 			h4{
 				color: #333333;
 				font-size: 12px;
@@ -606,6 +607,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 				th{
 					font-size: 16px;
 					border-bottom: none;
+					color: #999;
 				}
 			}
 		}
