学习中心直播label更改

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -233,7 +233,11 @@ body{
 				}
 				.live-label{
 					border-radius: 3px;
-					right: -21px;
+					right: -15px;
+					width: 30px;
+					display: inline-block;
+					background: url('img/live-label.png') no-repeat 0 0;
+					text-indent: -99999px;
 				}
 			}
 			.last{
