--- a/source/widget/Public.Module/collectApp.less
+++ b/source/widget/Public.Module/collectApp.less
@@ -33,7 +33,7 @@
 			}
 		}
 		.collect-detail {
-			float: left;
+			// float: left;
 			margin-left: 5px;
 			p{
 				margin-bottom: 0;
@@ -50,10 +50,10 @@
 					float: left;
 					height: 50px;
 					width: 50px;
+					margin-right: 10px;
 				}
 				p{
-					float: left;
-					margin-left: 10px;
+					// float: left;
 					color: #333;
 					span{
 						display: block;
