Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/UserHome.homework/homework.less
+++ b/source/widget/UserHome.homework/homework.less
@@ -37,6 +37,9 @@
     h1, h2, h3, h4, h5, h6{
         color: #666;
     }
+    button{
+      outline: none;
+    }
     .homework-header{
           display: block;
           overflow: hidden;
