Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/Public.Dynamic/fresh.less
+++ b/source/widget/Public.Dynamic/fresh.less
@@ -613,6 +613,7 @@
                display: inline;
                padding-right: 4px;
                .fresh-v{
+                    float: left;
                     width: 18px;
                     height: 14px;
                     margin: 8px 4px 0 4px;
