--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -67,6 +67,7 @@
             position: relative;
             margin-left: 60px;
             .message-error{
+                display: none;
                 position: absolute;
                 bottom: -35px;
                 width: 325px;
