--- a/source/widget/UM.none/none.less
+++ b/source/widget/UM.none/none.less
@@ -1,25 +1,29 @@
-.none-content{
-    float: left;
-    position: relative;
-    left: 50%;
-    .nc-center{
+.none-clear{
+    clear: both;
+    .none-content{
+        float: left;
         position: relative;
-        left: -50%;
-        img{
-            _float: left;
-            _margin-right: 240px;
-        }
-        p{
-            float: right;
-            _float: none;
-            _width: 120px;
-            margin: 30px 0 0 20px;
-            line-height: 35px;
-            font-family: "Microsoft YaHei";
-            font-size: 16px;
-            em{
-                font-style: normal;
-                color: #e74c3c;
+        left: 50%;
+        top: 30px;
+        .nc-center{
+            position: relative;
+            left: -50%;
+            img{
+                _float: left;
+                _margin-right: 240px;
+            }
+            p{
+                float: right;
+                _float: none;
+                _width: 120px;
+                margin: 30px 0 0 20px;
+                line-height: 35px;
+                font-family: "Microsoft YaHei";
+                font-size: 16px;
+                em{
+                    font-style: normal;
+                    color: #e74c3c;
+                }
             }
         }
     }
