--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -163,6 +163,9 @@
             .hpl-btn{
                 position: absolute;
                 bottom: -70px;
+                &:focus{
+                    outline: none;
+                }
             }
         }
         .active{
