--- a/source/widget/UM.Basic.information/basic-information.less
+++ b/source/widget/UM.Basic.information/basic-information.less
@@ -101,7 +101,10 @@
         .btn-submit{
             width: 100px;
             margin-top: 25px;
-            font-size: 14px; 
+            font-size: 14px;
+            &:focus{
+                outline: none;
+            } 
         }  
     }
     .bi-right{
