--- a/source/widget/UM.mobile.phone/mobile.phone.less
+++ b/source/widget/UM.mobile.phone/mobile.phone.less
@@ -126,5 +126,8 @@
         width: 100px;
         margin: 0px 30px 0 75px;
         font-size: 14px; 
+        &:focus{
+            outline: none;
+        }
     }
 }
