--- a/source/widget/UM.password/password.less
+++ b/source/widget/UM.password/password.less
@@ -90,5 +90,8 @@
         width: 110px;
         margin: 0px 30px 0 75px;
         font-size: 14px;
+        &:focus{
+            outline: none;
+        }
     }
 }
