--- a/source/widget/UM.mobile.phone/mobile.phone.less
+++ b/source/widget/UM.mobile.phone/mobile.phone.less
@@ -120,6 +120,9 @@
             width: 120px;
             margin-left: 12px;
             font-size: 14px; 
+            &:focus{
+                outline: none;
+            }
         }
     }
     #mpform_submit{
