Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.wrongQues/error_question.less
+++ b/source/widget/UserHome.wrongQues/error_question.less
@@ -9,6 +9,7 @@
         text-align: center;
     }
 }
+
 .wrongQuest{
   .selector{
     background-color: rgb(249,249,249);
@@ -24,7 +25,17 @@
   
   .nav-tabs{
     margin-bottom: 10px;
+      overflow: hidden;
   } 
+    .wrongQuest-sum{
+        margin-top: 10px;
+        margin-bottom: 0;
+        color:rgb(153,153,153);
+        float:right;
+            span{
+                color:rgb(231,76,60);
+            }
+    }
 }
 
 .choiceHide{
