课程列表样式

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -779,7 +779,9 @@ ul,li{list-style: none;}
 		margin-right: 15px;
 	}
 }
-
+.mt0{
+  margin-top: 0;
+}
 .search_tips{
 	border-bottom: 1px solid #eaeaea;
 	height: 42px;
