Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/UserHome.homework/homework.less
+++ b/source/widget/UserHome.homework/homework.less
@@ -37,7 +37,7 @@
     h1, h2, h3, h4, h5, h6{
         color: #666;
     }
-    button{
+    button, a{
       outline: none;
     }
     .homework-header{
@@ -154,7 +154,7 @@
             width: 140px;
             height: 18px;
             text-align: center;
-            i{
+            a{
                 background: url("img/homeIcon.png");
                 width: 33px;
                 height: 18px;
@@ -269,12 +269,13 @@
                       line-height: 25px;
                       margin-top: 20px;
                       text-align: center;
-                      i{
+                      a{
                          background: url("img/homeIcon.png") no-repeat;
                          width: 20px;
                          height: 20px;
                          display: inline-block;
                          cursor: pointer;
+                         outline: none;
                          &.homework-audio{
                              background-position: -180px 0;
                           }
