收藏样式更改

--- a/source/widget/Public.Module/collectApp.less
+++ b/source/widget/Public.Module/collectApp.less
@@ -120,9 +120,8 @@
 				border-radius: 18px;
 				float: left;
 				height: 35px;
-				margin: 10 0;
+				margin: 10px 0;
 				overflow: hidden;
-				margin-top: 10px;
 				span.icoVoice{
 					background: url("img/voice_icon1.png") no-repeat 0 0;
 					float: left;
