--- a/source/widget/UM.all.order/all.order.css
+++ b/source/widget/UM.all.order/all.order.css
@@ -101,12 +101,63 @@
   width: 100%;
   height: 115px;
 }
-.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher img {
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .teacher-main {
   float: left;
+  overflow: hidden;
+  width: 60px;
+  height: 90px;
+  margin: 20px 15px 0 12px;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .teacher-main .avatar-photo {
+  float: left;
+  margin-right: 10px;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .teacher-main .avatar-photo img {
   width: 60px;
   height: 60px;
-  margin: 20px 15px 0 12px;
   border-radius: 50%;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items {
+  position: relative;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items ul {
+  overflow: hidden;
+  width: 800px;
+  height: 60px;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items ul li {
+  overflow: hidden;
+  float: left;
+  width: 158px;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items .avatar-roll {
+  position: absolute;
+  right: 6px;
+  bottom: 4px;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items .avatar-roll a {
+  outline: none;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items .avatar-roll a em {
+  display: inline-block;
+  height: 17px;
+  line-height: 17px;
+  text-align: center;
+  text-indent: -9999em;
+  vertical-align: top;
+  width: 17px;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items .avatar-roll a .icon-chevron-left {
+  background: url('img/icon_chevron_left.png') no-repeat 0 0;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items .avatar-roll a .icon-chevron-right {
+  background: url('img/icon_chevron_right.png') no-repeat 0 0;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items .avatar-roll a.none .icon-chevron-left {
+  background: url('img/icon_chevron_left_none.png') no-repeat 0 0;
+}
+.ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher .majar-items .avatar-roll a.none .icon-chevron-right {
+  background: url('img/icon_chevron_right_none.png') no-repeat 0 0;
 }
 .ao-content .some-order .ao-details ul li .ao-subtitle-left .order-teacher em {
   float: left;
@@ -142,14 +193,13 @@
 .ao-content .some-order .ao-details ul li .ao-operation span {
   display: inline-block;
   width: 50px;
-  margin: 0 25px;
 }
 .ao-content .some-order .ao-details ul li .ao-operation span a {
   font-size: 12px;
   font-family: "SimSun";
   color: #333;
 }
-.ao-content .some-order .ao-details ul li .ao-operation button {
+.ao-content .some-order .ao-details ul li .ao-operation .btn {
   width: 100px;
   margin-bottom: 12px;
   font-family: "simsun";
