--- a/source/widget/UM.all.order/all.order.less
+++ b/source/widget/UM.all.order/all.order.less
@@ -98,12 +98,65 @@
                         .order-teacher{
                             width: 100%;
                             height: 115px;
-                            img{
+                            .teacher-main{
                                 float: left;
+                                overflow: hidden;
                                 width: 60px;
-                                height: 60px;
+                                height: 90px;
                                 margin: 20px 15px 0 12px;
-                                border-radius: 50%;
+                                .avatar-photo{
+                                    float: left;
+                                    margin-right: 10px;
+                                    img{
+                                        width: 60px;
+                                        height: 60px;
+                                        border-radius: 50%;
+                                    }
+                                }
+                            }
+                            .majar-items{
+                                position: relative;
+                                ul{
+                                    overflow: hidden;
+                                    width: 800px;
+                                    height: 60px;
+                                    li{
+                                        overflow: hidden;
+                                        float: left;
+                                        width: 158px;
+                                    }
+                                }
+                                .avatar-roll{
+                                    position: absolute;
+                                    right: 6px;
+                                    bottom: 4px;
+                                    a{
+                                        outline: none;
+                                        em{
+                                            display: inline-block;
+                                            height: 17px;
+                                            line-height: 17px;
+                                            text-align: center;
+                                            text-indent: -9999em;
+                                            vertical-align: top;
+                                            width: 17px;
+                                        }
+                                        .icon-chevron-left{
+                                            background: url('img/icon_chevron_left.png') no-repeat 0 0;
+                                        }
+                                        .icon-chevron-right{
+                                            background: url('img/icon_chevron_right.png') no-repeat 0 0;
+                                        }
+                                    }
+                                    a.none{
+                                        .icon-chevron-left{
+                                            background: url('img/icon_chevron_left_none.png') no-repeat 0 0;
+                                        }
+                                        .icon-chevron-right{
+                                            background: url('img/icon_chevron_right_none.png') no-repeat 0 0;
+                                        }
+                                    }
+                                }
                             }
                             em{
                                 float: left;
