Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -42,6 +42,10 @@
       color: #fff;
       background-color: #3bafda;
     }
+    .row{
+        margin-left: 0;
+        margin-right: 0;
+    }
     /* 覆盖bootstrap默认设置end */
     
     background-color: rgb(255,255,255);
