--- a/source/widget/UserHome.wrongQues/error_question.less
+++ b/source/widget/UserHome.wrongQues/error_question.less
@@ -143,11 +143,11 @@
   }
   @RPadding:2rem;
   .cusAns{
-    padding-right:@RPadding;
+    padding-right:15px;
     color:rgb(204,0,0);
   }
   .corAns{
-    padding-right: @RPadding;
+    padding-right: 15px;
     color:rgb(51,153,204);
   }
   .explanace{
