学习中心更改

--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -189,9 +189,9 @@ button{
 .pd5 {
     padding:0 5px;
 }
-.pull-right {
-    padding:0;
-}
+// .pull-right {
+//     padding:0;
+// }
 .panel-header {
     height: 42px;
     line-height: 42px;
