--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -645,6 +645,7 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 				text-align: left;
 				.studied-end{
 					width: 57px;
+					float: none;
 				}
 			}
 			span.span-w3{
@@ -679,12 +680,18 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 				text-align: center;
 				height: 62px;
 				float: left;
+				em{
+					color: #999;
+					padding: 0;
+				}
 			}
 			.text-style{
 				text-align: center;
 				font-size: 12px;
 				span{
 					color: #999;
+					float: none;
+					width: 85px;
 				}
 				a.homework-wait-submit{
 					color: #ffbc3c;
@@ -693,12 +700,21 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			}
 			.studied-end{
 				color: @red;
+				a{
+					color: @red;
+				}
 			}
 			.yellow-mark{
 				color: #ffbc3c;
+				a{
+					color: #ffbc3c;
+				}
 			}
 			.studied{
 				color: #37bc9b;
+				a{
+					color: #37bc9b;
+				}
 			}
 			.static-gray{
 				color: #999999;
@@ -708,18 +724,22 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 			}
 			.wait-look{
 				color: #3bafda;
+				a{
+
+					color: #3bafda;
+				}
 			}
 			span.yellow-mark{
 				em{
 					display: inline-block;
-					width: 18px;
-					height: 18px;
-					margin-left: 5px;
+					text-align: left;
+					color: #999;
 				}
 				.mark{
 					background: url("img/exclamation.png") no-repeat right center;
 					vertical-align: middle;
-
+					padding-right: 24px;
+					
 				}
 			}
 		}
