--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -141,6 +141,9 @@ ul,li{list-style: none;}
 	}
 	.course-detail-wrap{
 		overflow: hidden;
+		.course-detail{
+			width: 89%;
+		}
 	}
 	.course-detail{
 		display: block;
