Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -42,6 +42,7 @@
       color: #fff;
       background-color: #3bafda;
     }
+    
     .row{
         margin-left: 0;
         margin-right: 0;
@@ -71,10 +72,15 @@
                 line-height: 1;
                 .choiceSetting;
             }
+            .choice-item-input{
+                margin-top: 2px;
+            }
+            
         }
         .choice-items-input{
             padding-top: 1.2rem;
             padding-bottom: 1.2rem;
+            
         }
         .choice-more{//更多知识点
             .choice-more-download{
@@ -126,6 +132,9 @@
             margin-bottom: 0;
             max-height:88px;
             overflow: auto;
+            .choice-item-input{
+                margin-top: 2px;
+            }
         }
         .choice-items-open{
             overflow: auto;
