--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -51,7 +51,7 @@ ul,li{list-style: none;}
 	font-family: "SimSun";
 	border-bottom: 1px solid @borderColor;
 	width: 100%;
-	padding: 20px 10px 10px 10px;
+	padding: 12px 12px 20px;
 	overflow: hidden;
 	.btn{
 		.border-radius(2px);
@@ -149,14 +149,15 @@ ul,li{list-style: none;}
 		display: block;
 		overflow: hidden;
 		p{
-			margin: 12px 0;
+			line-height: 30px;
 			overflow: hidden;
 			font-size: 12px;
+			margin: 0;
 		}
 		p.tip-for{
 			font-size: 12px;
 			color: #999;
-			margin: 12px 0;
+			margin: 0;
 			span{
 				margin-right: 15px;
 				float: left;
@@ -176,7 +177,7 @@ ul,li{list-style: none;}
 			.ui-username{
 				color: #666;
 				font-size: 12px;
-				line-height: 18px;
+				line-height: 30px;
 			}
 		}
 		.ui-username{
@@ -207,7 +208,6 @@ ul,li{list-style: none;}
 			line-height: 34px;
 		}
 		.course-title{
-			line-height: 18px;
 			font-size: 16px;
 			margin-top: 0;
 			span.course-tip{
@@ -223,20 +223,21 @@ ul,li{list-style: none;}
 			margin-top: 0;
 		}
 		.amount-show{
+			margin-top: 8px;
 			strong{
 				font-size: @fontSize;
 				color: #e74c3c;
 				font-weight: normal;
 			}
 			.course-static{
-				line-height: 21px;
+				line-height: 30px;
 				float: left;
 				margin-right: 18px;
 				.icon-staic{
 					background: url('img/static.png') no-repeat left center;
 					width: 20px;
-					height: 20px;
-					line-height: 20px;
+					height: 30px;
+					line-height: 30px;
 					vertical-align: top;
 					margin-right: 5px;
 					display: inline-block;
@@ -244,13 +245,13 @@ ul,li{list-style: none;}
 				}
 			}
 			.course-people{
-				line-height: 21px;
+				line-height: 30px;
 				float: left;
 				.icon-people{
 					background: url('img/ic_username.png') no-repeat left center;
 					width: 20px;
-					height: 20px;
-					line-height: 20px;
+					height: 30px;
+					line-height: 30px;
 					vertical-align: top;
 					margin-right: 5px;
 					display: inline-block;
