--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -460,8 +460,8 @@ ul,li{list-style: none;}
 					background: url("img/ic_username.png") no-repeat scroll left center;
 					display: inline-block;
 					font-style: normal;
-					height: 20px;
-					line-height: 20px;
+					height: 30px;
+					line-height: 30px;
 					margin-right: 5px;
 					vertical-align: top;
 					width: 20px;
@@ -850,7 +850,7 @@ ul,li{list-style: none;}
 			background-color: #f3f3f3;
 			color: #999;
 		}
-		span {
+		span,a{
 			border: 1px solid #cfcfcf;
 			border-radius: 0;
 			color: #333333;
@@ -859,16 +859,7 @@ ul,li{list-style: none;}
 			line-height: 25px;
 			margin: 0 5px;
 			padding: 0 10px;
-		}
-		a {
-			border: 1px solid #cfcfcf;
-			border-radius: 0;
-			color: #333333;
-			display: inline-block;
-			height: 25px;
-			line-height: 25px;
-			margin: 0 5px;
-			padding: 0 10px;
+			vertical-align: middle;
 		}
 	}
 	li.pages_current {
