课程列表样式

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -416,6 +416,7 @@ ul,li{list-style: none;}
 		display: block;
 		p{
 			margin: 3px 0;
+			line-height: 18px;
 		}
 		p.course-teacher{
 			height: 22px;
