--- a/source/widget/UM.mobile.phone/mobile.phone.less
+++ b/source/widget/UM.mobile.phone/mobile.phone.less
@@ -27,7 +27,7 @@
             border:1px solid #3bafda;
         }
     }
-    .message-error{
+    .phone-error{
         display: none;
         position: absolute;
         top: -40px;
