Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -215,6 +215,12 @@
 * html .jspCorner{margin: 0 -3px 0 0;}
 
 /* 讲测评css start */
+#testOnCourse{
+    .modal-body{
+        height: 455px;
+        overflow: auto;
+    }
+}
 .class_test{
     overflow: hidden;
 }
@@ -304,7 +310,7 @@
   padding: 20px 40px;
   overflow: hidden;
   border: 0 none;
-  width: 720px;
+  width:800px;
 }
 .class_test .testcon .answer {
   border: 0 none;
