Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/UserHome.homework/homework.less
+++ b/source/widget/UserHome.homework/homework.less
@@ -572,6 +572,12 @@
         &:hover{
             background: #2392ba;
         }
+        &.homework-submit-btn-disabled{
+            background: #3bafda;
+            opacity: .6;
+            filter:alpha(opacity=60);
+          
+        }
     }
 
     /** 
