--- a/source/widget/UM.all.order/order.modal.less
+++ b/source/widget/UM.all.order/order.modal.less
@@ -39,10 +39,24 @@
                 display: inline-block;
                 margin: 0 15px 5px 0;
             }
+            span{
+                color: #666;
+            }
         }
         .cannt-buy{
             position: relative;
             margin-top: 8px;
+            .shade{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #fff;
+                filter: Alpha(opacity=50); /* IE */   
+                -moz-opacity:0.5;    /* FF 主要是为了兼容老版本的FF */
+                opacity:0.5;    /* FF */
+            }
             strong{
                 display: inline-block;
                 margin-bottom: 5px;
@@ -84,6 +98,7 @@
                 margin-top: 4px;
                 font-size: 14px;
                 overflow: hidden;
+                color: #333;
             }
             p{
                 float: left;
