Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -215,9 +215,15 @@
 * html .jspCorner{margin: 0 -3px 0 0;}
 
 /* 讲测评css start */
-#testOnCourse{
+#chapterTestStart{
     .modal-body{
-        height: 455px;
+        height: 780px;
+        overflow: auto;
+    }
+}
+#chapterTestEnd{
+    .modal-body{
+        height: 780px;
         overflow: auto;
     }
 }
@@ -472,7 +478,7 @@
   border: 0 none;
 }
 .class_answer .wrong_list_new p {
-  width: 700px;
+  width: 780px;
 }
 .class_answer .wrong_list_new span {
   margin: 0 20px;
