--- a/source/widget/Public.Selector/selector.less
+++ b/source/widget/Public.Selector/selector.less
@@ -18,7 +18,7 @@
 .choiceTip{
   color:@grey;
 //  font-size: 1.2rem;
-  padding:1.2rem 1.2rem 1.2rem 0;
+  padding:12px 12px 12px 0;
   text-align: center;
   width:6rem;
   font-weight: normal;
