--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -221,7 +221,7 @@
         overflow: auto;
     }
 }
-#chapterTestEnd{
+#chapterTestResult{
     .modal-body{
         height: 780px;
         overflow: auto;
@@ -313,7 +313,7 @@
 }
 .class_test .testcon {
   color: #cc0000;
-  padding: 20px 40px;
+  padding-left: 10px;
   overflow: hidden;
   border: 0 none;
   width:800px;
