--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -46,7 +46,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-present-rank-by,.gold-exchange-rank-by{line-height: 52px;margin-left: 22px;color: #999;cursor: pointer;position: relative;}
 .gold-store-present-rank-by a:hover{color:#3bafda;}
 .gold-store-present-rank-by .glyphicon{top: 2px;}
-.gold-store-present-rank-new{width: 52px;position: absolute;left: 100px;}
+.gold-store-present-rank-new{width: 52px;}
 .gold-store-new-arrow{position: absolute;left: 133px;}
 .gold-store-present-rank-focus{color: #3bafda;}
 .gold-store-present-card-container{overflow: hidden;width: 934px;margin-top: 10px;}
