课程列表更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -365,7 +365,7 @@ ul,li{list-style: none;}
 		color: #fff;
 		display: inline-block;
 		line-height: 20px;
-		padding: 0 8px;
+		padding: 0 6px;
 	}
 }
 .hot-course-list .free-course-attention{
@@ -466,6 +466,9 @@ ul,li{list-style: none;}
 		}
 		.amount-show{
 			margin-bottom: 0;
+			.course-static{
+				margin-right: 13px;
+			}
 		}
 		.avatar-name{
 			.title-detail{
