Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/UserHome.alert/alert.less
+++ b/source/widget/UserHome.alert/alert.less
@@ -9,7 +9,7 @@
     border-radius: 5px;
     i {
         float: left;
-        background: url("img/exclamation-white.png?__inline");
+       /*  background: url("img/exclamation-white.png?__inline"); */
         width: 18px;
         height: 18px;
         display: inline-block;
