--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -238,6 +238,9 @@
                 height: 61px;
                 background: url(img/side_1.png) 0 -60px no-repeat;
             }
+            &.singInFinish {
+                     background: url(img/side_2.png) 0 0 no-repeat;
+            }
         }
     }
 }
