--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -97,6 +97,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .red-card-tip div,.present-card-tip div{padding:0;height: 30px;text-align: center;}
 .red-card-tip div span,.present-card-tip div span{height: 30px;line-height: 30px;color: #333;font-weight: bold;}
 .alertImg{margin-right: 10px;margin-bottom: 3px;}
+.gold-store-card-empty,.gold-store-present-empty {width: 100px;height: 34px;background-color: #999999;margin: 28px auto;text-align: center;font-size: 14px;line-height: 34px;color: #fff;border-radius: 3px;cursor: pointer;}
 
 
 
