--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -217,14 +217,13 @@
 .sideSingInItems {
     width: 60px;
     height: 121px;
-    overflow: hidden;
     position: fixed;
     right: 1px;
     top: 50%;
     ul {
-        overflow: hidden;
+        position: relative;
         li {
-            overflow: hidden;
+            width: 60px; overflow: hidden;
             a {
                 display: block;
                 width: 60px;
@@ -240,6 +239,27 @@
             }
             &.singInFinish {
                      background: url(img/side_2.png) 0 0 no-repeat;
+            }
+            &#singInLayer {
+                display: none;
+                width: 226px;
+                height: 60px;
+                position: absolute;
+                right:60px;
+                top:0;
+                z-index:1;
+                border: 1px solid #ccc;
+                background: #fff;
+                p {
+                    line-height: 180%;
+                    padding:8px 0 0px 10px;
+                    font-size: 12px;
+                    color: #666;
+                    strong {
+                        color: #cc0000;
+                        padding:0 5px;
+                    }
+                }
             }
         }
     }
