Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -19,7 +19,11 @@
   height: 100%;
   background: url('img/stuBack.jpg') top center;
 }
-  
+.center-img-all{
+    width: 95px;
+    height: 95px;
+    border-radius:50%;
+}
   .centerHeader-teacher-background{
     margin: 0 auto;
     background: url('img/header.jpg');
@@ -41,8 +45,8 @@
           padding-top: 60px;
           .centerHeader-img-head{
             display:block;
-            width: 100px;
-            height: 100px;
+            width: 105px;
+            height: 105px;
             margin: 0 auto;
             border: 5px solid rgba(255,255,255,0.5);
             border-radius: 50%;
