--- a/source/widget/UM.card.learn/card.learn.less
+++ b/source/widget/UM.card.learn/card.learn.less
@@ -1,4 +1,4 @@
-.gift-card-record{
+.gift-card{
     margin: 20px auto;
     padding: 10px 20px;
     position: relative; 
@@ -88,7 +88,7 @@
                 }
             }
             .prompt-box{
-                img.prompt{
+                .prompt{
                     position: relative;
                     width: 75px;
                     height: 55px;
@@ -157,7 +157,7 @@
             .prompt-box{
                 margin: 0 auto;
                 clear: both;
-                img.prompt{
+                .prompt{
                     position: relative;
                     width: 75px;
                     height: 55px;
