--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -212,6 +212,14 @@
 		    	span.look-right {color: #999;}
 		    }
 		}
+#xuebox_focusTips {
+    .dialog_content {
+        padding:10px;
+        strong {
+             color: #cc0000;font-size: 12px;font-weight: normal;
+        }
+    }   
+}
 		// 看点end
 //浮边的签到和问老师
 .sideSingInItems {
