--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -72,7 +72,6 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 
 /* 兑换遮罩 */
 .red-card-box,.present-box{overflow: hidden;margin: 42px 0;position: relative;}
-//.red-card-box img,.present-box img{float: left;}
 .red-card-intro,.present-intro{display: block;margin-left: 372px;min-width: 230px;}
 .red-card-name,.present-name{display: block;font-size: 16px;margin: 10px 0;}
 .red-card-intro-name,.present-intro-name{font-size: 12px;margin: 18px 0;}
@@ -98,8 +97,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .red-card-tip div span,.present-card-tip div span{height: 30px;line-height: 30px;color: #333;font-weight: bold;}
 .alertImg{margin-right: 10px;margin-bottom: 3px;}
 .gold-store-card-empty,.gold-store-present-empty {width: 100px;height: 34px;background-color: #999999;margin: 28px auto;text-align: center;font-size: 14px;line-height: 34px;color: #fff;border-radius: 3px;cursor: pointer;}
-.gold-tip-alert{color: #e74c3c;}
-.modal-img{float: left;width: 330px;}
-.modal-img img{display: block;margin: 0 auto;}
+.gold-tip-alert{color: #e74c3c;margin-left: 5px;}
+.gold-modal-img{float: left;width: 330px;height: 198px;display: inline-block;line-height: 198px;text-align: center;}
 
 
