Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.learning/study-course.less
+++ b/source/widget/UserHome.learning/study-course.less
@@ -492,25 +492,20 @@
   color: #cc0000;
 }
 .wrong_list_new .wrong_list_anwser .error_big {
-  background: url('http://img04.xesimg.com/icon/error_big.png') 0 3px no-repeat;
+  background: url('img/error_big.png') 0 3px no-repeat;
 }
 .wrong_list_new .wrong_list_anwser .right_big {
-  background: url('http://img04.xesimg.com/icon/right_big.png') 0 3px no-repeat;
+  background: url('img/right_big.png') 0 3px no-repeat;
 }
 .wrong_list_new .wrong_list_anwser span {
   padding-right: 20px;
 }
-.wrong_list_new .wrong_list_knowledge {
-  width: 868px;
-  overflow: hidden;
-  padding: 0 0 0 70px;
-  background: url("http://img04.xesimg.com/wrong_icon_knowledge.png") no-repeat left 0px top 5px;
-}
+
 .wrong_list_new .wrong_list_analysis {
   width: 868px;
   overflow: hidden;
   padding: 0 0 0 70px;
-  background: url("http://img04.xesimg.com/wrong_icon_analysis.png") no-repeat left 0px top 10px;
+  background: url("img/wrong_icon_analysis.png") no-repeat left 0px top 10px;
 }
 .class_answer ul,.class_answer li {
     list-style: none;
